# fastapi-sqlmodel-async

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fmt.bash  pyproject.toml
app/: app.py  db.py
app/repo/: base.py  user.py
migrations/: env.py
migrations/versions/: 202502221707-c0003cdb55fa_init.py  202502221733-890ccb348816_users_login_unique.py
models/: user.py  utils.py
tests/: conftest.py
tests/api/: test_api_user.py
tests/model/: test_user.py
